--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,22 @@
 .swiper-pagination-clickable .swiper-pagination-bullet {
     background: #66D7D1;
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    background: #1a1a1a;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #66D7D1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #4fa8a3;
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #66D7D1 #1a1a1a;
+}
